Revision history for {{$dist->name}}

{{$NEXT}}

0.032     2018-12-15 20:20:24+08:00 Asia/Kuala_Lumpur
    New features:

    - ->buffer now supports high/low watermark
    - ->is_paused($obj) will check to see if the node is
    paused on request from $obj

0.031     2018-12-13 23:03:16+08:00 Asia/Kuala_Lumpur
    New features:

    - ->buffer method for collecting items while a source/sink
    are paused
    - ->retain method for keeping sources around

0.030     2018-12-13 20:58:38+08:00 Asia/Kuala_Lumpur
    New features:

    - flow control expanded and moved to the Ryu::Node
    parent class

    Bugs fixed:

    - resolved some edge cases where handlers can be
    added/removed during callback loops
    - the ->source inside a Ryu::Sink for handling events
    is now preserved when attaching an external source
    via ->from

0.029     2018-12-02 14:20:37+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - ensure we retain sources when merging
    - allow merging with no parent source (Ryu::Source->merge)

0.028     2018-10-14 00:03:50+08:00 Asia/Kuala_Lumpur
    New features:

    - handle undef better in ->filter, and support arrayref as list
    of options (string match only so far, but this will eventually
    be a recursive match)

0.027     2018-01-02 00:52:31+08:00 Asia/Kuala_Lumpur
    New features:

    - ->hexdump, mainly intended for debugging protocol handling
    - ->map_from_source, allowing control over what is emitted (and
    when) compared to ->map

0.026     2017-12-28 01:11:07+08:00 Asia/Kuala_Lumpur
    No new features.

    Internal changes:

    - Clean up duplicated code which is now available in upstream Future.pm 0.37
    

0.025     2017-10-22 17:06:29+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - Minor update to Ryu::Observable to fix a typo in a method call

0.024     2017-09-01 20:50:54+08:00 Asia/Kuala_Lumpur
    New features:
